add 'rev' alias in bazaar.conf

--- a/bazaar/bazaar.conf
+++ b/bazaar/bazaar.conf
@@ -10,3 +10,4 @@ gconflicts_diff3 = meld
 tip = log -r-1
 top = log -l10 --line
 show = log -v -p
+rev = version-info --custom --template="{revision_id}\n"
