shortcut to switch prefixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,7 @@
+# set -g prefix M-Tab
+# bind M-Tab send-prefix
 set -g prefix C-a
+bind C-a send-prefix
 unbind C-b
 set -sg escape-time 1
 
@@ -6,8 +9,6 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-bind C-a send-prefix
 
 set-window-option -g mode-keys vi
 
@@ -101,3 +102,7 @@ set -g message-attr bold
 set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+
+bind e set -g prefix C-a; bind C-a send-prefix; display "Prefix: C-a"
+unbind .
+bind . set -g prefix M-Tab; bind M-Tab send-prefix; display "Prefix: M-Tab"
