change send-prefix to the M-Tab (macro-key on typematrix) by default for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
-# set -g prefix M-Tab
-# bind M-Tab send-prefix
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix M-Tab
+bind M-Tab send-prefix
+# set -g prefix C-a
+# bind C-a send-prefix
 unbind C-b
 set -sg escape-time 1
 
@@ -103,6 +103,7 @@ set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=c
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
 
+# allow to switch between C-a and M-Tab (typematrix) for prefix
 bind e set -g prefix C-a; bind C-a send-prefix; display "Prefix: C-a"
 unbind .
 bind . set -g prefix M-Tab; bind M-Tab send-prefix; display "Prefix: M-Tab"
