--- a/tmux.conf
+++ b/tmux.conf
@@ -32,20 +32,20 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # set the color of the window list
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+# setw -g window-status-fg cyan
+# setw -g window-status-bg default
+# setw -g window-status-attr dim
 
 # set colors for the active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+# setw -g window-status-current-fg white
+# setw -g window-status-current-bg red
+# setw -g window-status-current-attr bright
 
 # pane colors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+# set -g pane-border-fg green
+# set -g pane-border-bg black
+# set -g pane-active-border-fg white
+# set -g pane-active-border-bg yellow
 
 
 # Open panes in the same directory using the tmux-panes script
@@ -74,7 +74,8 @@ bind l select-pane -R
 
 set -g history-limit 10000
 
-source '/opt/powerline/powerline/bindings/tmux/powerline.conf'
+run-shell "powerline-daemon -q"
+source '/home/gbaconnier/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # allow to switch between C-a and M-Tab (typematrix) for prefix
 bind e set -g prefix C-a; bind C-a send-prefix; display "Prefix: C-a"
