semicolons must be escaped in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,6 +78,6 @@ run-shell "powerline-daemon -q"
 source '/home/gbaconnier/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # allow to switch between C-a and M-Tab (typematrix) for prefix
-bind e set -g prefix C-a; bind C-a send-prefix; display "Prefix: C-a"
+bind e set -g prefix C-a\; bind C-a send-prefix\; display "Prefix: C-a"
 unbind .
-bind . set -g prefix M-Tab; bind M-Tab send-prefix; display "Prefix: M-Tab"
+bind . set -g prefix M-Tab\; bind M-Tab send-prefix\; display "Prefix: M-Tab"
