tmux now supports two prefixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,5 @@
-set -g prefix M-Tab
-bind M-Tab send-prefix
-# set -g prefix C-a
-# bind C-a send-prefix
-unbind C-b
+set-option -g prefix C-a
+set-option -g prefix2 M-Tab
 set -sg escape-time 1
 
 set -g base-index 1
@@ -76,8 +73,3 @@ set -g history-limit 10000
 
 run-shell "powerline-daemon -q"
 source '/home/gbaconnier/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
-
-# allow to switch between C-a and M-Tab (typematrix) for prefix
-bind e set -g prefix C-a\; bind C-a send-prefix\; display "Prefix: C-a"
-unbind .
-bind . set -g prefix M-Tab\; bind M-Tab send-prefix\; display "Prefix: M-Tab"
