--- a/tmux.conf
+++ b/tmux.conf
@@ -19,10 +19,10 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # mouse support - set to on if you want to use the mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+# setw -g mode-mouse off
+# set -g mouse-select-pane off
+# set -g mouse-resize-pane off
+# set -g mouse-select-window off
 
 # enable activity alerts
 setw -g monitor-activity on
