--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 set-window-option -g mode-keys vi
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 set -g default-terminal "screen-256color"
 
@@ -69,3 +69,13 @@ set -g history-limit 10000
 
 run-shell "powerline-daemon -q"
 source '/home/gbaconnier/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind C-l send-keys 'C-l'
