tmux: remove powerline, set title

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@ set-option -g prefix C-b
 set-option -g prefix2 M-Tab
 set -sg escape-time 1
 
+set-option -g set-titles on
+set-option -g set-titles-string "#S / #W"
+
 set -g base-index 1
 setw -g pane-base-index 1
 
@@ -67,8 +70,8 @@ bind l select-pane -R
 
 set -g history-limit 10000
 
-run-shell "powerline-daemon -q"
-source '/home/gbaconnier/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+# run-shell "powerline-daemon -q"
+# source '/home/gbaconnier/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
