--- a/zsh/config
+++ b/zsh/config
@@ -1,3 +1,7 @@
 export EDITOR='vim'
 export LESS='-R'
 export LESSOPEN='|~/.lessfilter %s'
+
+export TF_VAR_key_pair=gbaconnier
+
+export LESS="-SXFR"
