--- a/config/i3/config
+++ b/config/i3/config
@@ -28,7 +28,12 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
+
+exec --no-startup-id "setxkbmap -layout us dvp -option compose:menu -option caps:escape"
+
 exec --no-startup-id nm-applet
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -41,7 +46,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec "rofi -no-config -no-lazy-grab -show run -modi run,drun,window -theme ~/.config/polybar/scripts/rofi/launcher.rasi"
 # bindsym $mod+b exec clerk
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -106,6 +111,19 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -151,7 +169,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # change keyboard layouts
 #bindsym $mod+c exec "bash -c 'setxkbmap fr ch'"
-#bindsym $mod+i exec "bash -c 'setxkbmap us dvp compose:menu'"
+#bindsym $mod+i exec "bash -c 'setxkbmap us dvp compose:menu caps:escape'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -186,12 +204,12 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        tray_output primary
+#bar {
+#        tray_output primary
 #        mode hide
 #        hidden_state hide
-        status_command py3status --config ~/.i3/i3status.conf
-}
+#        status_command py3status --config ~/.i3/i3status.conf
+#}
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+m move scratchpad
@@ -199,7 +217,7 @@ bindsym $mod+Shift+m move scratchpad
 # Show the first scratchpad window
 bindsym $mod+m scratchpad show
 
-bindsym $mod+y exec /home/gbaconnier/bin/audioswitch
+bindsym $mod+y exec "~/.bin/audioswitch"
 
 bindsym $mod+u exec xclip -selection clipboard -o | qrencode -o ~/.qr.png; exec feh -FZ ~/.qr.png
 
@@ -219,11 +237,11 @@ bindsym XF86AudioNext exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2
 bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Prev
 
 exec --no-startup-id nm-applet &
-exec --no-startup-id dunst -config ~/.i3/dunstrc &
+exec --no-startup-id dunst -config ~/.config/i3/dunstrc &
 # exec --no-startup-id volnoti &
 exec --no-startup-id SpiderOakONE &
 
 # Setup screens
-exec --no-startup-id autoxrandr
+# exec --no-startup-id autoxrandr
 
 # exec --no-startup-id synclient TouchpadOff=1
