--- a/tmux.conf
+++ b/tmux.conf
@@ -82,3 +82,6 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
 
 bind C-l send-keys 'C-l'
+
+
+source-file ~/.tmux-colorscheme.conf
