--- a/config/i3/config
+++ b/config/i3/config
@@ -42,7 +42,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "rofi -no-config -no-lazy-grab -show run -modi run,drun,window -theme ~/.config/polybar/scripts/rofi/launcher.rasi"
+bindsym $mod+d exec "rofi -no-config -no-lazy-grab -show drun -modi drun,run,window -theme ~/.config/polybar/scripts/rofi/launcher.rasi"
 # bindsym $mod+b exec clerk
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
