i3: set focused window title to yellow

--- a/config/i3/config
+++ b/config/i3/config
@@ -265,7 +265,7 @@ font pango:Hack 8
 
 # green gruvbox
 # class                 border|backgr|text|indicator|child_border
-client.focused          $green $green $darkgray $purple $darkgray
+client.focused          $yellow $yellow $darkgray $purple $darkgray
 client.focused_inactive $darkgray $darkgray $yellow $purple $darkgray
 client.unfocused        $darkgray $darkgray $yellow $purple $darkgray
 client.urgent           $red $red $white $red $red
