polybar: Fix wired network display

--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -749,11 +749,11 @@ toggle-off-foreground = ${color.red}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
-[module/wired -network]
+[module/wired-network]
 type = internal/network
 interface = enp0s25
 
-label-connected = %essid% %downspeed:9%
+label-connected = 
 
 [module/wireless-network]
 type = internal/network
