polybar: show i3 mode (resize, ...)

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -139,7 +139,7 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces sep cpu memory filesystem
+modules-left = launcher sep workspaces i3 sep cpu memory filesystem
 modules-center = sep date
 modules-right = battery wired-network wireless-network sep volume keyboard sep sysmenu
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
