--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -538,6 +538,8 @@ index-sort = true
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
 ;;format = <label-state> <label-mode>
+         
+format = <label-mode>
 
 ; Available tokens:
 ;   %mode%
@@ -545,6 +547,10 @@ index-sort = true
 ;;label-mode = %mode%
 ;;label-mode-padding = 2
 ;;label-mode-background = #e60053
+
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = ${color.pink}
 
 ; Available tokens:
 ;   %name%
