polybar: add ignored file to configure local changes
Allow to support different computers (one with HiDPI)
The screens bars still need to be customizable.

--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -757,13 +757,15 @@ toggle-off-foreground = ${color.red}
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
-interface = enp0s25
+; interface to set in local.ini
+; interface = enp0s25
 
 label-connected = 
 
 [module/wireless-network]
 type = internal/network
-interface = wlp3s0
+; interface to set in local.ini
+; interface = wlp3s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -1040,10 +1042,11 @@ enable-scroll = true
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
 icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
+icon-1 = 2;
+icon-2 = 3;聆
 icon-3 = 4;
 icon-4 = 5;
+icon-5 = 6;阮
 icon-default = 
 
 ; Available tags:
