--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -27,6 +27,7 @@ include-file = ~/.config/polybar/bars.ini
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
+include-file = ~/.config/polybar/local.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -61,7 +62,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 34
+height = 34:1
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -176,7 +177,7 @@ tray-position = right
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = 28
 
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
@@ -291,3 +292,11 @@ compositing-border = over
 pseudo-transparency = false
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[bar/eDP-1]
+inherit = bar/main
+monitor = eDP-1
+
+[bar/DP-1]
+inherit = bar/main
+monitor = DP-1
