--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -489,7 +489,7 @@ type = internal/i3
 ; on different bars
 ;
 ; Default: false
-;;pin-workspaces = true
+pin-workspaces = true
 
 ; This will split the workspace name on ':'
 ; Default: false
@@ -525,12 +525,13 @@ index-sort = true
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;聆
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;阮
+ws-icon-default = 
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 
@@ -539,7 +540,7 @@ index-sort = true
 ;   <label-mode> (default)
 ;;format = <label-state> <label-mode>
          
-format = <label-mode>
+format = <label-state> <label-mode>
 
 ; Available tokens:
 ;   %mode%
@@ -558,11 +559,11 @@ label-mode-background = ${color.pink}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-focused = %index%
+label-focused = %icon%  %name%
 ;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
+label-focused-background = ${color.pink}
 ;;label-focused-underline = #fba922
-;;label-focused-padding = 4
+label-focused-padding = 3
 
 ; Available tokens:
 ;   %name%
@@ -570,8 +571,8 @@ label-mode-background = ${color.pink}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-unfocused = %index%
-;;label-unfocused-padding = 4
+label-unfocused = %icon%  %name%
+label-unfocused-padding = 3
 
 ; Available tokens:
 ;   %name%
@@ -579,9 +580,9 @@ label-mode-background = ${color.pink}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-visible = %index%
-;;label-visible-underline = #555555
-;;label-visible-padding = 4
+label-visible = %icon%  %name%
+;label-visible-underline = #555555
+label-visible-padding = 3
 
 ; Available tokens:
 ;   %name%
@@ -589,10 +590,10 @@ label-mode-background = ${color.pink}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-urgent = %index%
+label-urgent = %icon%  %name%
 ;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-padding = 4
+label-urgent-background = ${color.orange}
+label-urgent-padding = 3
 
 ; Separator in between workspaces
 ;;label-separator = |
